Upload images to Yandex, Edit orders, Add/Edit products; grid filters; configs; +Filters model; +Manufacturers model; +Filter Keeper class; +Memcache adapter; +filters.js; images

--- a/Core/View/layouts/front_end.phtml
+++ b/Core/View/layouts/front_end.phtml
@@ -45,7 +45,9 @@
                     <input type="hidden" name="filter-manufacturers_id" value="eq-">
                     <input type="hidden" name="order" value="asc-products_shoppingcart_price">
                     <input type="hidden" name="default_order_field" value="products_shoppingcart_price">
-                    <input type="hidden" name="page" value="1">
+                    <input type="hidden" name="filter-subcategory" value="">
+                    <input type="hidden" name="filter-origin" value="">
+                    {#<input type="hidden" name="page" value="1">#}
                 </form>
 
                 <div id="content_box">
