--- a/data/data/View/layouts/partial/twig_header.phtml
+++ b/data/data/View/layouts/partial/twig_header.phtml
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{{ baseUrl('/public/css/font-awesome.css') }}" />
     <link rel="stylesheet" href="{{ baseUrl('/public/css/styles.css') }}" />
     <link rel="stylesheet" href="{{ baseUrl('/public/css/print.css') }}" media="print" />
-    <link rel="icon"  href="{{ baseUrl('favicon.ico') }}" type="image/png" />
+    <link rel="icon"  href="{{ baseUrl('/public/favicon.ico') }}" type="image/png" />
 
     <script src="{{ baseUrl('/public/js/require.js') }}"></script>
     <script src="{{ baseUrl('/public/js/config.js') }}"></script>
