--- a/Core/View/layouts/partial/twig_header_front.phtml
+++ b/Core/View/layouts/partial/twig_header_front.phtml
@@ -58,11 +58,13 @@
     <header>
         <div class="wrapper-header">
             <div class="wrapper-header-text">
-                <h1 class="logo"><a href="{{ baseUrl('/') }}"><img src="public/images/logo.png"></a></h1>
+                <h1 class="logo"><a href="{{ baseUrl('/') }}"><img src="public/images/logo2.png"></a></h1>
                 <div class="row">
-                    <span class="phone">(068) 611-11-49 </span>
+                    <span class="phone-text">Заказ:</span>
+                    <span class="phone"> (093) 123-51-40</span>
                     <span class="phone">(050) 403-11-33 </span>
-                    <span class="phone">(093) 123-51-40 </span>
+                    <span class="phone-text">Доставка:</span>
+                    <span class="phone">  (068) 611-11-49 </span>
                 </div>
                 <div class="search-wrapper">
                     <div class="search-wrapper-for-substrate">
