--- a/modules/Admin/view/categories-crud.phtml
+++ b/modules/Admin/view/categories-crud.phtml
@@ -21,13 +21,17 @@
                 <input type="text" class="form-control" id="categories_seo_page_name" name="categories_seo_page_name" value="{{ row.categories_seo_page_name }}" required />
             </div>
         </div>
+        <div class="form-group">
+            <label class="control-label col-lg-2" for="categories_seo_page_name">{{ __('Наценка (%)') }}</label>
+            <div class="col-lg-10">
+                <input type="text" class="form-control" id="price_index" name="price_index" value="{{ row.price_index }}" required />
+            </div>
+        </div>
         <!--div class="form-group">
             <label class="control-label col-lg-2" for="status">{{ __('Status') }}</label>
             <div class="col-lg-10">
                 <select id="status" name="status" class="form-control">
                     <option {% if row.status == 'active' %} 'selected' {% endif %}>active</option>
-                    <option {% if row.status == 'disable' %} 'selected' {% endif %}>disable</option>
-                    <option {% if row.status == 'delete' %} 'selected' {% endif %}>delete</option>
                 </select>
             </div>
         </div-->
