--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1925,6 +1925,11 @@ select[multiple].input-lg {
   margin-bottom: 10px;
   color: #737373;
 }
+.help-block.hb-2 {
+  margin-left: 15px;
+    font-size: 80%;
+    clear: both;
+}
 @media (min-width: 768px) {
   .form-inline .form-group {
     display: inline-block;
