--- a/public/css/price.css
+++ b/public/css/price.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin: 0 0 20px 0;
     overflow: hidden;
-    padding: 20px 0;
+    padding: 2px 0;
     float: left;   
 }
 
@@ -16,6 +16,8 @@
     }
         .goods .name{
             margin-bottom: 8px;
+            font-weight: bold;
+            color: #b33604;
         }
         .wrapper-goods .image-box{
 
@@ -35,11 +37,11 @@
             background: -ms-linear-gradient(top,#6C7807, #C6DB0E );
             background: linear-gradient(to bottom, #6C7807, #C6DB0E );
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6C7807', endColorstr='#C6DB0E',GradientType=0 );
-            behavior: url(js/PIE.htc);
+            _behavior: url(js/PIE.htc);
         }
             .image-box  img {
                 width: 100px;
-                height: 100px;
+                _height: 100px;
                 border-radius: 5px;
 
             }
@@ -50,7 +52,7 @@
             width:133px;
         }
             .description .basket{
-                background: #fff;
+
                 width:110px;
                 margin: 10px 0;
                 text-align: center;
@@ -58,31 +60,32 @@
                 border-radius: 5px;
                 box-sizing: content-box;
                 height: 20px;
+
+                background: -moz-linear-gradient(top,#6C7807, #C6DB0E );
+                -pie-background:-moz-linear-gradient(top,#6C7807, #C6DB0E );
+                background: -webkit-linear-gradient(top,#6C7807, #C6DB0E );
+                background: -o-linear-gradient(top,#6C7807, #C6DB0E );
+                background: -ms-linear-gradient(top,#6C7807, #C6DB0E );
+                background: linear-gradient(to bottom, #6C7807, #C6DB0E );
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6C7807', endColorstr='#C6DB0E',GradientType=0 );
             }
                 .description .basket a{
-                    color: #712104;
+                    color: #fff;
                     font: 15px/16px Calibri,Arial;
                 }
                 .description .basket a::before {
-                    background: url("../images/basket-hover.png") no-repeat 0 50%;
+                    background: url("../images/basket.png") no-repeat 0 50%;
                     content: 'a';
                     text-indent: -9999px;
                     padding: 10px 10px;
                     color: transparent;
                 }
                 .description .basket:hover{
-                    background: -moz-linear-gradient(top,#6C7807, #C6DB0E );
-                    -pie-background:-moz-linear-gradient(top,#6C7807, #C6DB0E );
-                    background: -webkit-linear-gradient(top,#6C7807, #C6DB0E );
-                    background: -o-linear-gradient(top,#6C7807, #C6DB0E );
-                    background: -ms-linear-gradient(top,#6C7807, #C6DB0E );
-                    background: linear-gradient(to bottom, #6C7807, #C6DB0E );
-                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6C7807', endColorstr='#C6DB0E',GradientType=0 );
-                    behavior: url(js/PIE.htc);
+                    background: #fff;
                 }
-                .description .basket:hover a{color:#fff;}
+                .description .basket:hover a{_color:#fff;}
                 .description .basket:hover a::before {
-                    background: url("../images/basket.png") no-repeat 0 50%;
+                    background: url("../images/basket-hover.png") no-repeat 0 50%;
                 ;}
             .description .weight,
             .description .cost{
@@ -97,10 +100,11 @@
                 .number-arrow a.inc img{
                     width: 21px;
                     float: right;
-                    margin-top: 1px;
+                    margin-top: 2px;
                     cursor:pointer;
                 }
-                .number-arrow a.inc{
+                .number-arrow a.dec img{
+                    margin-top: 1px;
                 }
                 .number-arrow [type="number"]{
                     box-shadow: none;
@@ -115,4 +119,7 @@
                 }
                 .num{ -moz-appearance: textfield;}/*чтобы убрать стрелки из number*/
 
-            .description .price{float: right}
+            .description .price{
+                float: right;
+                color: #fd0709;
+            }
